deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ggic-vocprez-deployment
  labels:
    app: ggic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ggic
  template:
    metadata:
      labels:
        app: ggic
    spec:
      containers:
      - name: ggic-vocprez
        image: 680471986828.dkr.ecr.ap-southeast-2.amazonaws.com/ggic/vocprez:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ggic-vocprez-service
spec:
  selector:
    app: ggic
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ggic-vocprez-ingress
spec:
  rules:
    - host: ggic.surroundaustralia.com
      http:
        paths:
          - backend:
              serviceName: ggic-vocprez-service
              servicePort: 80
