ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ggic-vocprez-ingress
  annotations:
    cert-manager.io/cluster-issuer: "ggic-vocprez-issuer-prod"
spec:
  tls:
    - hosts:
        - ggic.surroundaustralia.com
      secretName: ggic-vocprez-cert
  rules:
    - host: ggic.surroundaustralia.com
      http:
        paths:
          - backend:
              serviceName: ggic-vocprez-service
              servicePort: 80
